--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -590,7 +590,7 @@ function myCloseAlert() {
 }
 
 function readMore() {
-	$('.desc_readmore').readmore({maxHeight:100});
+	$('.desc_readmore').readmore({maxHeight:100,moreLink:"<a href='#' style='text-align:right' title='Show More'><i class='fa fa-chevron-down'></i></a>",lessLink:"<a href='#' style='text-align:right' title='Show Less'><i class='fa fa-chevron-up'></i></a>"});
 }
 
 function doSearch(button) {
