--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -334,12 +334,12 @@ $(function(){
 	$(".multi_installButton").click(function()               { installMulti(); });
 	$(".multi_installClear").click(function()                { clearMultiInstall(); });
 
-	if ( "<?=$cfg['viewMode']?>" == "icon" )   $("#viewIcon").prop("disabled",true);
 	if ( "<?=$cfg['viewMode']?>" == "table" )  $("#viewTable").prop("disabled",true);
 	if ( "<?=$cfg['viewMode']?>" == "detail" ) $("#viewDetail").prop("disabled",true);
 
 /* Everything is now initialized.  This is the start of the actual "real" code */
   if ( "<?=$firstRun?>" == "true" ) {
+		sweetAlertBackground("white");
 		swal({
 			title: 'Disclaimer',
 			text: 'All applications listed here are 3rd party additions to unRaid.  Neither the authors of CA nor Limetech make any warranty as to the suitability of any application listed here. <br><em>Every attempt is made to ensure that only safe and compatible applications are present</em><font size=0><br>Note: if your flash drive is corrupted you may also see this message and it will need to be fixed first</font>',
@@ -533,8 +533,7 @@ function changePage(pageNumber) {
 	var maxPerPage = getPerPage();
 	var selected = data_selected;
 
-	myAlert("","Searching");
-	$("#Total").html("<i class='fa fa-spinner fa-spin' style='font-size:20px;color:MediumBlue;' aria-hidden='true'></i>");
+	mySpinner();
 	$.post(URL,{action:'display_content',sortOrder:sortOrder,windowWidth:windowWidth,pageNumber:pageNumber,maxPerPage:maxPerPage,selected:selected},function(data3) {
 		if (data3) {
 			$('#templates_content').html(data3);
@@ -558,7 +557,7 @@ function myAlert(description,textdescription,textimage,imagesize, outsideClick, 
 	if ( imagesize == "" ) { imagesize = "80"; }
 	disableTooltipster();
 	if ( textimage ) {
-		textdescription = textdescription + "<br><br><center><i class='fa fa-spinner fa-spin' style='font-size:"+imagesize+"px;color:MediumBlue;' aria-hidden='true'></i></center>";
+		textdescription = textdescription + "<br><br><center><i class='fa fa-spinner fa-spin' style='font-size:"+imagesize+"px;color:#DEB887;' aria-hidden='true'></i></center>";
 	}
 	swal({
 		title: description,
@@ -567,6 +566,7 @@ function myAlert(description,textdescription,textimage,imagesize, outsideClick, 
 		showConfirmButton: showConfirm,
 		showCancelButton: showCancel,
 		type: alertType,
+		animation: false,
 		html: true
 	});
 }
@@ -574,6 +574,15 @@ function myAlert(description,textdescription,textimage,imagesize, outsideClick, 
 function myCloseAlert() {
 	swal.close();
 	enableTooltipster();
+}
+
+function mySpinner() {
+	sweetAlertBackground("transparent");
+	myAlert("",""," ",150);
+}
+
+function sweetAlertBackground(color) {
+	$(".sweet-alert").css("background",color);
 }
 
 function readMore() {
@@ -608,7 +617,6 @@ function doSearch(button) {
 	}
 
 	$("#Total1").show();
-	$("#Total").html("Searching... <i class='fa fa-spinner fa-spin' style='font-size:20px;color:MediumBlue;' aria-hidden='true'></i>");
 	if (filter) {
 		$("#Category").html(" Search Results for <font color='green'>"+filter+"</font>");
 	}
@@ -626,8 +634,8 @@ function doSearch(button) {
 	if ( "<?=$cfg['dockerSearch']?>" == "yes" ) {
 		$('.dockerSearch').show();
 	}
-	myAlert("Searching...", "Searching for <strong><font color=red>"+filter+"</font></strong>",true,"40");
-
+	mySpinner();
+	
 	$.post(URL,{action:'get_content',filter:filter,sortOrder:sortOrder,windowWidth:windowWidth,maxPerPage:maxPerPage},function(data) {
 		if (data) {
 			enableButtons();
@@ -666,11 +674,13 @@ function forceUpdateButton() {
 	if ( mode == 'appFeed Mode' ) {
 		$.post(URL,{action:'force_update_button'},function(data) {
 			if (data) {
+				sweetAlertBackground("white");
 				myAlert("Updating Content","Retrieving the latest application Lists",true,"40");
 				forceUpdate();
 			}
 		});
 	} else {
+		sweetAlertBackground("white");
 		swal({
 			title: "Switch To Legacy Mode?",
 			text: "<strong>This will force CA to manually download the application templates.</strong><br><br><font color='red'>This process once begun cannot be aborted and may take a minute or so</font>",
@@ -687,6 +697,7 @@ function forceUpdateButton() {
 		function(isConfirm) {
 			if (isConfirm) {
 				$.post(URL,{action:'force_update_button'});
+				sweetAlertBackground("white");
 				myAlert("Switching to Legacy Mode","Downloading <span id='downloadStatus'>Repository List</span>");
 				$.post(URL,{action:'downloadRepositories'},function(data) {
 					if (data) {
@@ -762,8 +773,6 @@ function changeSortOrder(button,buttonClass,previousApps) {
 	if ( data_docker ) {
 		changeDockerView(button);
 	} else {
-		$("#Total").html("Rendering... <i class='fa fa-spinner fa-spin' style='font-size:20px;color:MediumBlue;' aria-hidden='true'></i>");
-
 		$.post(URL,{action:'display_content',sortOrder:sortOrder,windowWidth:windowWidth,pageNumber:pageNumber,maxPerPage:maxPerPage,selected:selected},function(data3) {
 			if (data3) {
 				$('#templates_content').html(data3);
@@ -782,7 +791,6 @@ function getSortOrder() {
 	var sortOrder = new Object();
 	var jsonOrder = new Object();
 
-	if ( $("#viewIcon").prop("disabled") )       { sortOrder.viewMode = ["viewMode","icon"];             jsonOrder.viewMode = "#viewIcon"; }
 	if ( $("#viewTable").prop("disabled") )      { sortOrder.viewMode = ["viewMode","table"];            jsonOrder.viewMode = "#viewTable"; }
 	if ( $("#viewDetail").prop("disabled") )     { sortOrder.viewMode = ["viewMode","detail"];           jsonOrder.viewMode = "#viewDetail"; }
 
@@ -832,7 +840,7 @@ function getContent(init,category,description,newApp) {
 		enableIcon("#sortIcon, #subcategoryIcon",false);
 	} else {
 		enableIcon("#sortIcon",true);
-		myAlert("","Searching");
+		mySpinner();
 	}
 	$("#Total1").show();
 	$("#sortButtons,#templateSortButtons").show();
@@ -881,8 +889,6 @@ function getContent(init,category,description,newApp) {
 			$("#NetworkCategory,#MediaServerCategory,#MediaAppCategory,#NONE,#ToolsCategory,#Total1").hide();
 			$("#MainCategory,#New").show();
 		}
-		$("#Total").html("Searching...  <i class='fa fa-spinner fa-spin' style='font-size:20px;color:MediumBlue;' aria-hidden='true'></i>");
-
 		if ( (category == "New") || (category == "All") ) { category = ""; }
 
 		var sortOrder = getSortOrder();
@@ -933,10 +939,9 @@ function dockerSearch(pageNumber) {
 	enableIcon("#sortIcon",true);
 	$(".dockerSearch,#templateSortButtons,.multi_installDiv").hide();
 	$("#currentSection").html("Available Apps");
-	$("#Total").html("Searching... <i class='fa fa-spinner fa-spin' style='font-size:20px;color:MediumBlue;' aria-hidden='true'></i>");
 	$("#Category").html("DockerHub Search Results For <font color='red'>"+filter+"</font> <span id='pageNumber'></span>");
 	var sortOrder = getSortOrder();
-	myAlert("Searching dockerHub", "Retrieving <strong><font color=red>"+filter+"</font></strong> page <strong><font color=red>"+pageNumber+"</font></strong>",true,"40");
+	mySpinner();
 	$.post(URL,{action:'search_dockerhub',filter:filter,page:pageNumber,sortOrder:sortOrder},function(data) {
 		if (data) {
 			$('#templates_content').html(data);
@@ -958,7 +963,7 @@ function authorSearch(author) {
 }
 
 function dockerConvert(dockerID) {
-	myAlert("Converting Dockerfile","",true,"40");
+	mySpinner();
 
 	totalDisplayed = $("#Total").html();
 	$("#Total").html("Converting...");
@@ -1000,7 +1005,7 @@ function showModeration(script,title) {
 function previousApps(button,installed) {
 	setPageOne();
 	resetSortByDate();
-	myAlert("","Searching");
+	mySpinner();
 	enableIcon("#categoryIcon, #subcategoryIcon",false);
 	data_docker = "";
 	if ( installed ) {
@@ -1017,7 +1022,6 @@ function previousApps(button,installed) {
 	$("#"+button).prop("disabled",true);
 	data_section = button;
 
-	$("#Total").html("Searching... <i class='fa fa-spinner fa-spin' style='font-size:20px;color:MediumBlue;' aria-hidden='true'></i>");
 	$(".dockerSearch,#AppsOnly").hide();
 	$("#templates_content,#sortButtons,#Total1,#templateSortButtons").show();
 	enableIcon("#sortIcon",true);
@@ -1037,6 +1041,7 @@ function previousApps(button,installed) {
 }
 
 function removeApp(application, humanName) {
+	sweetAlertBackground("white");
 	swal({
 		title: "Delete Template?",
 		text: "Are you sure you want to delete <font color='red'><strong><em>"+humanName+"</em></strong></font> from the list of previously installed applications?",
@@ -1060,8 +1065,10 @@ function removeApp(application, humanName) {
 
 function uninstallApp(application,humanName) {
 	if ( humanName == "Community Applications" ) {
+		sweetAlertBackground("white");
 		myAlert("AE-35 Error","<b><font color='red'>"+humanName+"</font></b> cannot be uninstalled this way.  You must go to the plugins tab and remove Community Applications from there.  <em><font color='purple'>But, why would you ever want to uninstall CA?</font></em>",null,null,true,false,true,"error");
 	} else {
+		sweetAlertBackground("white");
 		swal({
 			title: "Uninstall Application?",
 			text: "Are you sure you want to uninstall <font color='red'><strong><em>"+humanName+"</em></strong></font>?",
@@ -1088,6 +1095,7 @@ function uninstallApp(application,humanName) {
 
 function deletePrivateApp(path,name,author) {
 	var displayPath = path.replace("/boot/config/plugins/","...");
+	sweetAlertBackground("white");
 	swal({
 		title: "Remove Private Application?",
 		text: "Are you sure you want to remove the private application <em><font color='red'><b>"+name+"</b></font> by <font color='red'><b>"+author+"</b></font>?<br><font size='0'>("+displayPath+")",
@@ -1116,6 +1124,7 @@ function myTrim(x) {
 }
 
 function uninstallDocker(application,humanName) {
+	sweetAlertBackground("white");
 	swal({
 		title: "Uninstall Application?",
 		text: "Are you sure you want to uninstall <font color='red'><strong><em>"+humanName+"</em></strong></font>?",
@@ -1192,7 +1201,7 @@ function setPageOne() {
 
 function pinnedApps(button) {
 	setPageOne();
-	myAlert("","Searching");
+	mySpinner();
 	enableIcon("#categoryIcon, #subcategoryIcon",false);
 	$("#currentSection").html("Pinned Apps");
 	data_docker = "";
@@ -1218,6 +1227,7 @@ function displayTags(leadTemplate) {
 	$.post(URL,{action:'displayTags',leadTemplate:leadTemplate},function(data) {
 		if (data) {
 			$(".ca_appPopup").tooltipster('close');
+			sweetAlertBackground("white");
 			swal({
 				title: "Choose A Branch To Install",
 				text: data,
@@ -1244,7 +1254,6 @@ function updateViewMode(id,buttonClass) {
 	var maxPerPage = $("#maxPerPage").val();
 	if ( id == "viewTable" )  { var view = "table"; }
 	if ( id == "viewDetail" ) { var view = "detail"; }
-	if ( id == "viewIcon" )   { var view = "icon"; }
 	$.post(URL,{action:'changeViewModeSettings',maxPerPage:maxPerPage,view:view},function(data) {
 		if (data) {
 			changeSortOrder(id,buttonClass);
@@ -1343,7 +1352,7 @@ function installMulti() {
 		docker.push(el);
 		dockerCount += 1;
 	});
-
+	sweetAlertBackground("white");
 	swal({
 		title: "Install "+makePlural("Application",dockerCount+pluginCount)+"?",
 		text: "Are you sure you want to install "+dockerCount+" docker "+makePlural("application",dockerCount)+" and "+pluginCount+" "+makePlural("plugin",pluginCount)+"?.  <em>Docker applications will be installed utilizing the most recently saved template with no user input on your part</em>",
